--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "apexcharts": "^4.7.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
